Вновь принятые сотрудники
Необходимо сделать, чтобы определенные пользователи видели вновь принятых на работу сотрудников.

Добавить в общие настройки - количество дней, которые сотрудник считается новым.

Изменить вычисляемое значение newly_hired_employee (модель Emploee, определена в модуле Recruting)
новым работник считается если {дата первого рабочего} дня не заполнена или от неё прошло меньше дней чем указано в настройках

--- a/views/hr_settings_views.xml
+++ b/views/hr_settings_views.xml
@@ -12,7 +12,7 @@
             <button string="Cancel" type="object" name="cancel" class="oe_link"/>
           </header>
           <group>
-            <field name="default_days_limit"/>
+            <field name="days_limit"/>
           </group>
         </form>
       </field>
